--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,8 +3,8 @@ version: "3.9"
 services:
   backend:
     build: ./backend
-    ports:
-      - "8000:8000"
+    expose:
+      - 8000
     container_name: backend
 
   web_server:
